# Nono-Cowork

./: .env.example  .gitignore  LICENSE  README.md  README_zh-CN.md  desktop-agent.service  nono-cowork.service  pyproject.toml  syncthing_audit.md
desktop/: README.md  index.html  package-lock.json  package.json
desktop/electron/: main.cjs  preload.cjs
desktop/scripts/: fetch-syncthing-win.ps1
desktop/src/: App.tsx  index.css  main.tsx
developdocs/: tool-access-control.md
docs/: composio_setup.md  composio_setup_zh-CN.md  desktop_setup.md  desktop_setup_zh-CN.md  feishu_setup.md  feishu_setup_zh-CN.md  syncthing_setup.md  syncthing_setup_zh-CN.md  telegram_setup.md  telegram_setup_zh-CN.md
skills/skill-finder/: SKILL.md
src/: agent.py  agent_runner.py  card_extractor.py  composio_triggers.py  config.py  file_drop.py  llm.py  logger.py  main.py  notifications.py  prompt.py  session.py  skills.py  syncthing_watcher.py
src/automations/: composio_triggers.py  file_drop.py
src/channels/: base.py  desktop.py  feishu.py  feishu_formatting.py  telegram.py  telegram_formatting.py
src/context/: __init__.py  compressor.py  spill.py
src/core/: agent.py  agent_runner.py  llm.py  prompt.py  session.py
src/delivery/: card_extractor.py  formatter.py  notifications.py
src/dream/: dreamer.py
src/integrations/: syncthing_watcher.py
src/memory/: __init__.py  store.py
src/scheduler/: executor.py  store.py
src/subagent/: base.py  gemini_cli.py  self_agent.py
src/tools/: __init__.py  channel_ops.py  command.py  composio_tools.py  composio_trigger_tools.py  (+8 more)
(+32 files in other folders)
